--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,9 @@
     <string name="action_favorite">Favourite</string>
     <string name="action_relocate">Relocate</string>
     <string name="action_settings">Settings</string>
-    <string name="action_home">Home</string>
+    <string name="action_all">All</string>
+    <string name="action_public">Public</string>
+    <string name="action_private">Private</string>
     
     <string name="home_map">Map</string>
     <string name="home_map_description">Shows WiFi strength superimposed onto a 2D map.</string>
@@ -33,7 +35,8 @@
     <string name="title_activity_camera_az">A - Z</string>
     <string name="title_activity_compass_az">A - Z</string>
     
-    <string name="network_eduroam">eduroam</string>
-    <string name="network_wifi">Wifi</string>
+    <string name="network_eduroam">eduroam\nPrivate\nSir Fred Schonell Drive</string>
+    <string name="network_wifi">Wifi\nPublic\n123 Fake Address</string>
+    <string name="network_distance">50m</string>
 
 </resources>
