Did a lot of things.
- Started working on updated designs for Camera and Compass View.
- Modified Camera and Compass View so it goes to the A - Z screen first.
- Modified the Camera prototype image to create a mock-up display.
- Began some very early work on the Settings page for the Map View.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,10 @@
     <string name="title_activity_camera_az">A - Z</string>
     <string name="title_activity_compass_az">A - Z</string>
     
+    <string name="settings_favourites_colour">Favourites Colour: </string>
+    <string name="settings_public_colour">Public Colour: </string>
+    <string name="settings_private_colour">Private Colour: </string>
+    
     <string name="network_eduroam">eduroam\nPrivate\nSir Fred Schonell Drive</string>
     <string name="network_wifi">Wifi\nPublic\n123 Fake Address</string>
     <string name="network_distance">50m</string>
