--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     
     <string name="btn_search">Search</string>
     
+    <string name="action_home">Home</string>
     <string name="action_az">A - Z</string>
     <string name="action_favorite">Favourite</string>
     <string name="action_relocate">Relocate</string>
@@ -23,6 +24,11 @@
     <string name="home_compass_description">A compass which points toward the location where the WiFi signal is strongest.</string>
     <string name="home_camera">Camera</string>
     <string name="home_camera_description">Displays the WiFi strength superimposed on a camera display.</string>
+    
+    <!-- Use \n for newline. -->
+    <string name="info_map">This is where the map information is displayed.\nSelect a WiFi network either on the map or by using the favourites or A - Z menu buttons.</string>
+    <string name="info_compass">Compass Info</string>
+    <string name="info_camera">Camera Info</string>
     
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_map">Map View</string>
